# spine

./: Cargo.toml  README.md  build.sh  config.toml  spine.service
src/: config.rs  local.rs  main.rs  pad.rs  server.rs  test_encoder.rs  test_gpio.rs  test_servo.rs
