[package]
name = "spine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = {version="0.10.8", features=["toml"]}
serde_json = "1.0"
postcard = "1.0.0"
serialport = "4.2.0"
serde = { version = "1.0.0", features = ["derive"] }
tokio = { version = "1.0.0", features = ["full"] }
