[package]
name = "spine"
version = "0.1.0"
edition = "2021"
default-run = "spine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde_json = "1.0"
postcard = "1.0.0"
serialport = "4.2.0"
serde = { version = "1.0.0", features = ["derive"] }
tokio = { version = "1.0.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2.0"

[[bin]]
name = "test_encoder"
path = "src/test_encoder.rs"
