[package]
name = "spine"
version = "0.1.0"
edition = "2021"
default-run = "spine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
git-version = "0.3.5"
xdg = "2.4"
toml = "0.5"
serde_json = "1.0"
postcard = "1.0.0"
serialport = "4.2.0"
sysfs_gpio = "0.6.1"
tokio-serial = "5.4"
serde = { version = "1.0.0", features = ["derive"] }
tokio = { version = "1.0.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2.0"

[[bin]]
name = "test_encoder"
path = "src/test_encoder.rs"

[[bin]]
name = "test_gpio"
path = "src/test_gpio.rs"

[[bin]]
name = "test_servo"
path = "src/test_servo.rs"
